deployment/base/linus/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blockchain-manager
  namespace: trichter
  labels:
    app.kubernetes.io/name: blockchain-manager
    app.kubernetes.io/part-of: trichter
    app.kubernetes.io/component: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: blockchain-manager
  template:
    metadata:
      labels:
        app.kubernetes.io/name: blockchain-manager
        app.kubernetes.io/part-of: trichter
        app.kubernetes.io/component: app
    spec:
      containers:
        - name: blockchain-manager
          image: blockchain-manager:local
          imagePullPolicy: Never
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 20
      restartPolicy: Always
