deployment/base/linus/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blockchain-manager
  namespace: trichter
  labels:
    app.kubernetes.io/name: blockchain-manager
    app.kubernetes.io/part-of: trichter
spec:
  selector:
    app.kubernetes.io/name: blockchain-manager
  ports:
    - port: 3000
      targetPort: 3000
