deployment/base/linus/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: blockchain-manager
  namespace: trichter
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`blockchain.trichter.hauptspeicher.com`)
      kind: Rule
      services:
        - name: blockchain-manager
          port: 3000
  tls:
    certResolver: myresolver
